<resources>
    <string name="strNo">No</string>
    <string name="strYes">Yes</string>
    <string name="strCancel">Back</string>
    <string name="strDelete">Delete</string>
    <string name="strOK">OK</string>
    <string name="strDone">Done</string>
    <string name="strSave">Save</string>
    <string name="strOff">OFF</string>
    <string name="strOn">ON</string>
    <string name="strBack">Back</string>
    <string name="str_link">Link</string>
    <string name="str_unlink">Unlink</string>
    <string name="str_next">Next</string>
    <string name="str_try_again">Try Again</string>
    <string name="str_switch_on">ON</string>
    <string name="str_switch_off">OFF</string>
    <string name="str_exit_app_sure">Are you sure to exit?</string>
    <string name="strShortMonday">MON</string>
    <string name="strShortTuesday">TUE</string>
    <string name="strShortWednesday">WED</string>
    <string name="strShortThursday">THU</string>
    <string name="strShortFriday">FRI</string>
    <string name="strShortSaturday">SAT</string>
    <string name="strShortSunday">SUN</string>
    <string name="strShortJanuary">Jan</string>
    <string name="strShortFebruary">Feb</string>
    <string name="strShortMarch">Mar</string>
    <string name="strShortApril">Apr</string>
    <string name="strShortMay">May</string>
    <string name="strShortJune">Jun</string>
    <string name="strShortJuly">Jul</string>
    <string name="strShortAugust">Aug</string>
    <string name="strShortSeptember">Sep</string>
    <string name="strShortOctober">Oct</string>
    <string name="strShortNovember">Nov</string>
    <string name="strShortDecember">Dec</string>
    <string name="strAM">AM</string>
    <string name="strPM">PM</string>
    <string name="strTabHome">Home</string>
    <string name="strTabTrend">Trends</string>
    <string name="strTabActivity">Activity</string>
    <string name="strTabSleep">Sleep</string>
    <string name="strTabPlayground">Playground</string>
    <string name="strTabSetting">Setting</string>
    <string name="strCalories">calories</string>
    <string name="calories_k">1000 calories</string>
    <string name="strSteps">steps</string>
    <string name="steps_k">steps (k)</string>
    <string name="strKilometers">Kilometers</string>
    <string name="strMiles">miles</string>
    <string name="kilometers_short">km</string>
    <string name="kilometers_k">1000 km</string>
    <string name="miles_k">1000 miles</string>
    <string name="strDayCapital">DAY</string>
    <string name="strWeekCapital">WEEK</string>
    <string name="strMonthCapital">MONTH</string>
    <string name="strYearCapital">YEAR</string>
    <string name="strMetric">Metric</string>
    <string name="strImperial">Imperial</string>
    <string name="fhEnergy">energy</string>
    <string name="fhThisDay">This Day</string>
    <string name="fhOutOf">out of</string>
    <string name="fhNoSyncRecord">no sync record</string>
    <string name="fhPairFirst">Please pair a device first</string>
    <string name="fhUpdated">updated: </string>
    <string name="fhSwipeAgain">please swipe again</string>
    <string name="trend_day">Day</string>
    <string name="trend_week">Week</string>
    <string name="trend_month">Month</string>
    <string name="trend_year">Year</string>
    <string name="trend_12am">12am</string>
    <string name="trend_6am">6am</string>
    <string name="trend_12pm">12pm</string>
    <string name="trend_6pm">6pm</string>
    <string name="trend_best_hour">best hour:</string>
    <string name="trend_best_day">best day:</string>
    <string name="trend_best_month">best month:</string>
    <string name="trend_se_very_good">very good</string>
    <string name="trend_se_good">good</string>
    <string name="trend_se_poor">poor</string>
    <string name="trend_sleep_h">h</string>
    <string name="trend_sleep_m">m</string>
    <string name="trend_sleep_now">Sleep now</string>
    <string name="trend_add_sleep_entry">Add sleep entry</string>
    <string name="sl_sleep_entry">Sleep entry</string>
    <string name="sl_sleep_at">I slept at</string>
    <string name="sl_wake_at">and wake at</string>
    <string name="sl_error_begin_end">The sleep time must be earlier than the wake up time</string>
    <string name="sl_error_end_now">The wake up time must be earlier than the current time</string>
    <string name="sl_error_sixty_minutes">In order to calculate sleep quality accurately, can not log the sleep entry less than 1 hour</string>
    <string name="faGoal">goal</string>
    <string name="faGoalsHit">goals hit</string>
    <string name="faEnergy">energy</string>
    <string name="faStep">step</string>
    <string name="fa_energy_k">energy (k)</string>
    <string name="faShareDay">"Today I've generated %1$d energy, walked %2$d steps which is about %3$s, and burned %4$d calories."</string>
    <string name="faShareWeek">"This week I've generated %1$d energy, walked %2$d steps which is about %3$s, and burned %4$d calories."</string>
    <string name="faShareMonth">"This month I've generated %1$d energy, walked %2$d steps which is about %3$s, and burned %4$d calories."</string>
    <string name="faShareYear">"This year I've generated %1$d energy, walked %2$d steps which is about %3$s, and burned %4$d calories."</string>
    <string name="fsDeepSleep">deep sleep</string>
    <string name="fsLightSleep">light sleep</string>
    <string name="fsAwake">awake</string>
    <string name="fsSleepEfficiency">sleep efficiency</string>
    <string name="fsAvgBad">bad</string>
    <string name="fsAvgAverage">average</string>
    <string name="fsAvgGood">good</string>
    <string name="fsAvg">avg.</string>
    <string name="fsDuration">duration</string>
    <string name="fsEfficiency">efficiency</string>
    <string name="fsTimesWoke">times woke</string>
    <string name="fsSettingSleep">Setting</string>
    <string name="fsToggleStop">stop</string>
    <string name="fsToggleOK">remember sync to get sleep data</string>
    <string name="fsAlarm">alarm</string>
    <string name="fsShareDay">"Today I've slept %1$d hours and %2$d minutes, with a %3$s sleep efficiency."</string>
    <string name="fsShareWeek">"This week, I've slept an average of %1$d hours and %2$d minutes, with a %3$s sleep efficiency."</string>
    <string name="fsShareMonth">"This month, I've slept an average of %1$d hours and %2$d minutes, with a %3$s sleep efficiency."</string>
    <string name="fsShareYear">"This year, I've slept an average of %1$d hours and %2$d minutes, with a %3$s sleep efficiency."</string>
    <string name="settings">Settings</string>
    <string name="profile_me">Me</string>
    <string name="profile_you">You</string>
    <string name="profile_profile_settings">Profile Settings</string>
    <string name="profile_daily_goal">Daily Goal</string>
    <string name="profile_social_accounts">Social Accounts</string>
    <string name="profile_manage_device">Manage Device</string>
    <string name="profile_device_no_conn">Not connected to any device</string>
    <string name="profile_add_a_device">Add a Device</string>
    <string name="profile_my_device">My Device</string>
    <string name="profile_battery_capacity">Battery Capacity: </string>
    <string name="profile_synced_time">Synced: </string>
    <string name="profile_unlink_device">Unlink Device</string>
    <string name="profile_unlink_device_q">Are you sure you want to unlink this device?</string>
    <string name="profile_how_to_sync">How to sync data</string>
    <string name="profile_sos">SOS</string>
    <string name="profile_sos_history">SOS History</string>
    <string name="profile_sos_contact">Emergency Contact</string>
    <string name="profile_support">Support</string>
    <string name="profile_user_manual">User Manual</string>
    <string name="profile_terms_of_service">Terms of Service</string>
    <string name="profile_privacy_policy">Privacy Policy</string>
    <string name="profile_version">Version</string>
    <string name="fcSectionCustomize">Customize</string>
    <string name="fcProfile">Profile</string>
    <string name="fcUnit">Unit</string>
    <string name="fcGoalSetting">Goal Setting</string>
    <string name="fcShareToFacebook">Share To Facebook</string>
    <string name="fcUserCalendar">User Calendar</string>
    <string name="fcSectionPhoneNotifications">Phone Notifications</string>
    <string name="fcOutOfRangeAlert">Out-of-range Alert</string>
    <string name="fcIncomingCallSmsNoti">Incoming Call/SMS</string>
    <string name="fcConnectionMode">Connecting</string>
    <string name="fcSectionSmartKeys">Smart Keys</string>
    <string name="fcSmartKeys">Smart Keys</string>
    <string name="fcSmartKeysCurrentSetting">Now:\u0020</string>
    <string name="fcSmartKeysLaunch">Launch</string>
    <string name="fcSmartKeysFind">Find</string>
    <string name="fcSectionDeviceAlert">Device Alert</string>
    <string name="fcAlarm">Alarm</string>
    <string name="fcTaskAlert">Task Alert</string>
    <string name="fcMoveAlert">Move Alert</string>
    <string name="fcSectionDevice">Device</string>
    <string name="fcPairADevice">Pair a Device</string>
    <string name="fcDeviceList">Device List</string>
    <string name="fcLanguage">Language</string>
    <string name="fcBuzzVibrater">Buzz/Vibration</string>
    <string name="fcAutoSync">Auto Sync</string>
    <string name="fcBatteryCapacity">Battery Capacity</string>
    <string name="fcResetDevice">Reset Device</string>
    <string name="fcSectionAbout">About</string>
    <string name="fcTutorial">Tutorial</string>
    <string name="cpUsername">Username*</string>
    <string name="cpName">Name</string>
    <string name="cpGender">Gender</string>
    <string name="cpHeight">Height</string>
    <string name="cpWeight">Weight</string>
    <string name="cpStride">Stride</string>
    <string name="cpMale">Male</string>
    <string name="cpFemale">Female</string>
    <string name="edit">Edit</string>
    <string name="birthday">Birthday</string>
    <string name="username_discription">*Username is a public display name.</string>
    <string name="title_personal_info">Personal Information*</string>
    <string name="personal_info_discription">*We will only use personal information to better calculate fitness data.</string>
    <string name="title_sleep_preference">Sleep Preference*</string>
    <string name="title_sleep_preference_discription">*Sleep Preference will be used for automatic sleep tracking.</string>
    <string name="sleep_start_time">Sleep start time</string>
    <string name="sleep_wake_time">Sleep wake time</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_from_gallery">Choose from camera roll</string>
    <string name="import_from_facebook">Import from Facebook</string>
    <string name="remove_current_photo">Remove Current Photo</string>
    <string name="fcShareToWeibo">Share To Weibo</string>
    <string name="edt_email_hint">Email</string>
    <string name="df_set_alarm_time">--:-- AM</string>
    <string name="every_sunday">Every Sunday</string>
    <string name="every_monday">Every Monday</string>
    <string name="every_tuesday">Every Tuesday</string>
    <string name="every_wednesday">Every Wednesday</string>
    <string name="every_thursday">Every Thursday</string>
    <string name="every_friday">Every Friday</string>
    <string name="every_saturday">Every Saturday</string>
    <string name="emergency_contact_info">Emergency Contact info</string>
    <string name="emergency_contact_des">By filling out this emergency contact, when you activate SOS on your device,
        he or she will receive a SMS with you GPS location.</string>
    <string name="edt_phone_number_hint">Phone Number</string>
    <string name="sos_description">
        <![CDATA[
            Your device must be <font color=\"#be1e2d\">CONNECTED</font> to this app in order to send out SOS SMS.
        ]]>
    </string>
</resources>